fix jamjam so it has a tap-to-start message on iOS

--- a/public/examples/jamjam/css/jamjam.css
+++ b/public/examples/jamjam/css/jamjam.css
@@ -35,4 +35,12 @@ td {
 table {
     border-spacing: 10px;
 }
-
+#waitfortouch {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    display: none;
+    color: white;
+    background-color: purple;
+}
